# gpu-kernel-lab

./: .gitignore  DECISIONS.md  LICENSE  PLAN.md  README.md  VERIFICATION_LOG.md  gpu-kernel-lab-prompt.md
.github/workflows/: deploy.yml
docker/: Dockerfile.cuda  Dockerfile.rocm
docs/: memory-fences.html
kernels/: CMakeLists.txt
kernels/00-parallel-foundations/: CMakeLists.txt  cpu_semaphore_pipeline.cpp  gpu_block_reduce.cpp  gpu_histogram_race.cpp  gpu_threadfence.cpp  openmp_reduction.cpp  pthread_race.cpp  race_demo.cpp  race_fixed_atomic.cpp  race_fixed_mutex.cpp
kernels/01-basics/: CMakeLists.txt  branch_divergence.cpp  device_query.cpp  occupancy_experiment.cpp  vector_add.cpp
kernels/02-memory/: CMakeLists.txt  bandwidth_probe.cpp  pinned_vs_pageable.cpp  roofline_probe.cpp  saxpy_unroll.cpp  stride_bandwidth.cpp  transpose.cpp  vectorized_copy.cpp
kernels/02-memory/access-patterns/: CMakeLists.txt  aosoa_layout.cpp  cooperative_tile_load.cpp  embedding_lookup.cpp  gather_scatter.cpp  row_padding.cpp  vectorized_tail.cpp
kernels/03-gemm/: CMakeLists.txt  README.md  autotune_register_tiling.cpp  blas_baseline.cpp  gemm_common.h  quantized_epilogue.cpp  sgemm_step0_naive.cpp  sgemm_step1_shared.cpp  sgemm_step2_register_tiling.cpp  sgemm_step3_vectorized.cpp  sgemm_step4_double_buffer.cpp
kernels/03-occupancy/: CMakeLists.txt  tuning_levers_demo.cpp
kernels/04-reductions-softmax/: CMakeLists.txt  attention_naive.cpp  histogram_atomics.cpp  kv_page_gather.cpp  reduction.cpp  softmax.cpp  warp_reduce.cpp
kernels/05-advanced-scheduling/: CMakeLists.txt  async_pipeline.cpp  cta_swizzle.cpp  persistent_scheduler.cpp  split_k_gemm.cpp  stream_pipeline.cpp
kernels/06-pytorch-integration/: README.md  profile_model.py
kernels/06-pytorch-integration/cpp_extension/: gelu.cpp  gelu_kernel.cu  setup.py  test_gelu.py
kernels/06-pytorch-integration/custom_op_autograd/: test_custom_op.py
kernels/06-pytorch-integration/load_inline/: fused_bias_gelu.py
kernels/06-pytorch-integration/triton/: matmul_triton.py  softmax_triton.py
kernels/06-pytorch-integration/triton_examples/: matmul_triton.py  softmax_triton.py
kernels/07-multi-gpu-collectives/: CMakeLists.txt  allreduce_bench.cpp
kernels/common/: README.md  benchmark.h  ccl_portability.h  gpu_portability.h
kernels/exercises/: CMakeLists.txt  README.md  ex_a_saxpy.cpp  ex_b_block_reduce.cpp  ex_c_tail_correctness.cpp
scripts/: bench_all.py  fix_paren_spacing.py  profile_ncu.sh  profile_rocprof.sh
website/: mdx-components.tsx  mdx.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/chapters/[slug]/: page.tsx
website/app/exercises/: page.tsx
website/app/exercises/[slug]/: page.tsx
website/app/roadmap/: page.tsx
website/app/search-index.json/: route.ts
website/components/: AppWidthContainer.tsx  ChapterSidebar.tsx  LearningPathMap.tsx  MobileNav.tsx  SettingsModal.tsx  SettingsPanel.tsx  SettingsProvider.tsx  SiteFooter.tsx  SiteHeader.tsx  SiteSearch.tsx  TextSizeToggle.tsx  ThemeProvider.tsx  ThemeToggle.tsx
website/components/widgets/: BenchmarkComparison.tsx  Callout.tsx  ClassicPatternDiagrams.tsx  CollectiveAnimator.tsx  DataLayoutVisualizer.tsx  DataRaceTimeline.tsx  Exercise.tsx  FurtherReading.tsx  GatherScatterVisualizer.tsx  GemmFigures.tsx  LabBox.tsx  MemoryCoalescingVisualizer.tsx  MemoryFenceFigures.tsx  OccupancyCalculator.tsx  PipelineFigures.tsx  PlatformTabs.tsx  Quiz.tsx  RooflineChart.tsx  Solution.tsx  TilingAnimator.tsx
website/content/chapters/: a0-parallelization-and-data-races.mdx  a1-what-is-a-gpu.mdx  a2-first-kernel.mdx  a3-memory-hierarchy.mdx  a4-measuring-performance.mdx  a5-roofline-model.mdx  b10-reduction-softmax.mdx  b11-instruction-level-optimization.mdx  b6-memory-coalescing.mdx  b7-shared-memory-bank-conflicts.mdx  b8-occupancy-latency-hiding.mdx  b9-warp-level-programming.mdx  c12-gemm-optimization.mdx  c13-small-matrices-tail-effects.mdx  c14-warp-specialization-pipelines.mdx  c15-kernel-library-ecosystem.mdx  c16-profiling-deep-dive.mdx  d17-finding-kernels-to-optimize.mdx  d18-first-custom-extension.mdx  d19-fused-elementwise-reduction.mdx  d20-triton-intro.mdx  d21-integrating-into-training.mdx  e22-cutlass-deep-dive.mdx  e23-amd-kernel-ecosystem.mdx  e24-attention-kernels.mdx  e25-inference-engines.mdx  f26-atomics-histograms-irregular-access.mdx  f27-persistent-kernels-work-queues.mdx  f28-streams-graphs-host-device-pipeline.mdx  f29-low-precision-quantization-layouts.mdx  f30-autotuning-specialization-codegen.mdx  f31-correctness-determinism-debugging.mdx  f32-optimization-checklist.mdx  g33-nccl-rccl-collectives.mdx  gm1-gemm-reuse-and-roofline.mdx  gm2-hierarchical-tiling.mdx  gm3-memory-pipeline.mdx  gm4-tensor-core-mfma.mdx  gm5-split-k-stream-k.mdx  gm6-cta-scheduling-tail.mdx  (+17 more)
website/content/data/: benchmarks.json
website/content/exercises/: registry.ts  track-a.mdx  track-b.mdx  track-c.mdx  track-d.mdx  track-e.mdx  track-m.mdx  track-p.mdx  track-sp.mdx
website/lib/: curriculum.ts  search.ts  settings.ts  site.ts
