gklab_add_kernel(sgemm_step0_naive sgemm_step0_naive.cpp)
gklab_add_kernel(sgemm_step1_shared sgemm_step1_shared.cpp)
gklab_add_kernel(sgemm_step2_register_tiling sgemm_step2_register_tiling.cpp)
gklab_add_kernel(sgemm_step3_vectorized sgemm_step3_vectorized.cpp)
gklab_add_kernel(sgemm_step4_double_buffer sgemm_step4_double_buffer.cpp)
gklab_add_kernel(quantized_epilogue quantized_epilogue.cpp)
gklab_add_kernel(autotune_register_tiling autotune_register_tiling.cpp)

# Optional vendor-BLAS baseline (chapter 15): built only when cuBLAS/hipBLAS
# is available; the tutorial kernels above never depend on it.
if(GKLAB_PLATFORM STREQUAL "CUDA")
  find_package(CUDAToolkit QUIET)
  if(CUDAToolkit_FOUND AND TARGET CUDA::cublas)
    gklab_add_kernel(blas_baseline blas_baseline.cpp)
    target_link_libraries(blas_baseline PRIVATE CUDA::cublas)
  else()
    message(STATUS "03-gemm: cuBLAS not found, skipping blas_baseline")
  endif()
elseif(GKLAB_PLATFORM STREQUAL "HIP")
  find_package(hipblas QUIET CONFIG)
  if(hipblas_FOUND)
    gklab_add_kernel(blas_baseline blas_baseline.cpp)
    target_link_libraries(blas_baseline PRIVATE roc::hipblas)
  else()
    message(STATUS "03-gemm: hipBLAS not found, skipping blas_baseline")
  endif()
endif()
